--- a/src/styles/Timer.module.css
+++ b/src/styles/Timer.module.css
@@ -11,6 +11,7 @@
 .otherTimers {
     display: flex;
     gap: 25px;
+    font-size: 1.2em
 }
 
 
@@ -26,7 +27,7 @@
     background-color: #466A9F;
     border: 2px solid #3E5F8F;
     padding: 3px 6px;
-    font-size: 1em;
+    font-size: 1.5em;
     text-decoration: none;
     color: #FFFFFF;
     margin-top: 1vh;
